# pyfw-lasso

./: LICENSE  README.md  README.rst  howtoinstall.txt  setup.cfg  setup.py  todo.txt
conda/: requirements.txt
dev/: localmax.ipynb  scratch_localmax1d.py  scratch_localmax2d.py
examples/: Example_PFW.ipynb  example_fw.py  example_positivity_constraint.py  example_sparse_op.py
src/pyfwl/: __init__.py  fw_lasso.py  localmax.py  utils.py
src/tests/: test_L1NormPositivity.py
