[metadata]
name = pyfwl
summary = Implementation of the Polyatomic Frank-Wolfe algorithm to solve the LASSO problem.
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Adrian JARRET
author_email = adrian.jarret5@gmail.com
url = https://github.com/AdriaJ/pyfw-lasso
download_url = https://github.com/AdriaJ/pyfw-lasso
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
license = MIT

[options]
package_dir =
	= src/
packages =
	pyfwl
zip_safe = True
include_package_data = True
python_requires = >= 3.9, < 3.11
install_requires =
;	numpy >= 1.21, < 2
;	scipy >= 1.4, < 2
;	dask[complete] >= 2.12, < 2022.12
;	sparse >= 0.13, < 1
;	numba >= 0.51, < 1
	pandas >= 1.2, < 2
	matplotlib >= 3.3, < 4
	tqdm >= 4.61, < 5
	statsmodels >= 0.13, < 1
	pycsou @ git+https://github.com/matthieumeo/pycsou@v2-dev

[options.extras_require]
dev =
	sphinx == 2.1
	jinja2 < 3.1
