[metadata]
name = pyfwl
summary = Implementation of the Polyatomic Frank-Wolfe algorithm to solve the LASSO problem.
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Adrian JARRET
author_email = adrian.jarret5@gmail.com
url = https://github.com/AdriaJ/pyfw-lasso
download_url = https://github.com/AdriaJ/pyfw-lasso
classifiers =
	Development Status :: 5 - Production/Stable
	Framework :: Pycsou
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
license = MIT

[options]
package_dir =
	= src/
packages =
	pyfwl
zip_safe = True
include_package_data = True
python_requires = >= 3.9, < 3.12
install_requires =
	pandas >= 1.2, < 2
	matplotlib >= 3.3, < 4
	tqdm >= 4.61, < 5
	statsmodels >= 0.13, < 1
	pytest >= 7.4, < 8
	notebook >= 7.0, < 8
	pyxu @ git+https://github.com/matthieumeo/pyxu

[options.extras_require]
dev =
	sphinx == 2.1
	jinja2 < 3.1
