[metadata]
name = pyfwl
summary = Implementation of the Polyatomic Frank-Wolfe algorithm to solve the LASSO problem.
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Adrian JARRET
author_email = adrian.jarret5@gmail.com
url = https://github.com/AdriaJ/pyfw-lasso
download_url = https://github.com/AdriaJ/pyfw-lasso
classifiers =
	Development Status :: 5 - Production/Stable
	Framework :: Pycsou
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
license = MIT

[options]
package_dir =
	= src/
packages =
	pyfwl
zip_safe = True
include_package_data = True
python_requires = >= 3.9, < 3.12
install_requires =
	matplotlib >= 3.7, < 4
	pytest >= 7.4, < 8
    	jupyterlab >= 4.0, < 5
     	pyxu @ git+https://github.com/pyxu-org/pyxu@v1.2

[options.extras_require]
dev =
	sphinx == 2.1
	jinja2 < 3.1
